force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__AutomationDefault__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AutomationDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automation Default</label>
    <type>Checkbox</type>
</CustomField>