force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__CLOFOR_APPLICATION_USAGE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CLOFOR_APPLICATION_USAGE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLOFOR APPLICATION USAGE</label>
    <type>Checkbox</type>
</CustomField>