force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__CLOFOR_LICENSE_TYPE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CLOFOR_LICENSE_TYPE__c</fullName>
    <label>CLOFOR LICENSE TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CLOFOR STANARD LICENSE</fullName>
            </value>
            <value>
                <fullName>CLOFOR CHATTER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>