force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__CONTRACT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CONTRACT_TYPE__c</fullName>
    <label>CONTRACT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time(Case By Case)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>