force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__DATE_OF_EXPIRY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DATE_OF_EXPIRY__c</fullName>
    <label>DATE OF EXPIRY</label>
    <type>Date</type>
</CustomField>