force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__EMERGENCY_CONTACT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EMERGENCY_CONTACT__c</fullName>
    <label>EMERGENCY CONTACT</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>