force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__EMPLOYEE_ID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__EMPLOYEE_ID__c</fullName>
    <label>EMPLOYEE ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>