force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__FULL_NAME__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__FULL_NAME__c</fullName>
    <label>FULL NAME</label>
    <length>30</length>
    <type>Text</type>
</CustomField>