force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__HOME_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__HOME_ADDRESS__c</fullName>
    <label>HOME ADDRESS</label>
    <type>TextArea</type>
</CustomField>