force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__LICENSE_ISSUED_DATE__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LICENSE_ISSUED_DATE__c</fullName>
    <label>LICENSE ISSUED DATE</label>
    <type>Date</type>
</CustomField>