force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__MAIN_TRUCK_FLEET__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MAIN_TRUCK_FLEET__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAIN TRUCK &amp; FLEET</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>WORKER</relationshipLabel>
    <relationshipName>WORKER</relationshipName>
    <type>Lookup</type>
</CustomField>