force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__MainFacility__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MainFacility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main Facility</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__Facility__c.clofor_com_cfs__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__Facility__c</referenceTo>
    <relationshipLabel>WORKER/DRIVER</relationshipLabel>
    <relationshipName>WorkerDriver</relationshipName>
    <type>Lookup</type>
</CustomField>