force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__PIT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PIT_NUMBER__c</fullName>
    <label>PIT NUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>