force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__UserAccount__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UserAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>USER ACCOUNT</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WorkDriver</relationshipName>
    <type>Lookup</type>
</CustomField>