force-app/main/default/objects/clofor_com_cfs__WORKER__c/fields/clofor_com_cfs__WorkerBarCodeImage__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__WorkerBarCodeImage__c</fullName>
    <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=MECARD:N:&apos; + clofor_com_cfs__EMPLOYEE_ID__c , &apos;Create Qr Code for this item&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker BarCodeImage</label>
    <type>Text</type>
</CustomField>