force-app/main/default/objects/clofor_com_cfs__WORKER__c/recordTypes/clofor_com_cfs__Driver.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Driver</fullName>
    <active>true</active>
    <label>Driver</label>
</RecordType>