force-app/main/default/objects/clofor_com_cfs__WORKER__c/recordTypes/clofor_com_cfs__VesselCrew.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__VesselCrew</fullName>
    <active>true</active>
    <label>Vessel Crew</label>
</RecordType>