force-app/main/default/objects/clofor_com_cfs__WORKER__c/recordTypes/clofor_com_cfs__WarehouseWorker.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__WarehouseWorker</fullName>
    <active>true</active>
    <label>Warehouse Worker</label>
</RecordType>