force-app/main/default/objects/clofor_com_cfs__WORKER__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__EMPLOYEE_ID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__FULL_NAME__c</columns>
    <columns>clofor_com_cfs__WORK_TYPE__c</columns>
    <columns>clofor_com_cfs__DRIVER_LICENSE_NUMBER__c</columns>
    <columns>clofor_com_cfs__PHONE_NUMBER__c</columns>
    <columns>clofor_com_cfs__EMERGENCY_CONTACT__c</columns>
    <columns>clofor_com_cfs__LICENSE_ISSUED_DATE__c</columns>
    <columns>clofor_com_cfs__DATE_OF_EXPIRY__c</columns>
    <columns>clofor_com_cfs__MAIN_TRUCK_FLEET__c</columns>
    <columns>clofor_com_cfs__CLOFOR_APPLICATION_USAGE__c</columns>
    <columns>clofor_com_cfs__CLOFOR_LICENSE_TYPE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>